[openrewrite] add `tech.picnic.errorprone.refasterrules`